[package]
name = "zana"
version = "0.1.0"
edition = "2021"

[lib]
name = "zana"
path = "src/lib.rs" # Ensures the library is correctly defined

[dependencies]
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["std"] }
num-complex = "0.4.6"

[[example]]
name = "basic_circuit"
path = "examples/circuits/basic_circuit.rs"

[[example]]
name = "medium_circuit"
path = "examples/circuits/medium_circuit.rs"

[[example]]
name = "complex_circuit"
path = "examples/circuits/complex_circuit.rs"

