[package]
name = "zana"
version = "0.1.0"
edition = "2021"

[lib]
name = "zana"
path = "src/lib.rs" # Ensures the library is correctly defined

[dependencies]
blake2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand_core = "0.6"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
rsa = { version = "0.9", features = ["std"] }
num-complex = "0.4.6"
plotters = "0.3.4"
ratatui = "0.20"
crossterm = "0.27"
subtle = "2.6.1"

[[example]]
name = "basic_circuit"
path = "examples/circuits/basic_circuit.rs"

[[example]]
name = "medium_circuit"
path = "examples/circuits/medium_circuit.rs"

[[example]]
name = "complex_circuit"
path = "examples/circuits/complex_circuit.rs"

